Add `typesVersions` and `exports` to the `package.json` (#1059)
* Add `typesVersions` and `exports` to the `package.json`

Now to `import` the new `SDK` (a.k.a not `index-legacy`) with all of the types inside it all needed to do is `import` from  `@applitools/eyes-testcafe/next`

For example `BatchClose`:

```
import { BatchClose } from "@applitools/eyes-testcafe/next";
```

* change bug message

* Add `dist` to the exports to support `node@12`

in order to support `dist` `sub-moudles`

* Update js/packages/eyes-testcafe/package.json

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

* PR comment: add `typesVersions` `dist`

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

--- a/js/packages/eyes-testcafe/package.json
+++ b/js/packages/eyes-testcafe/package.json
@@ -30,6 +30,30 @@
   ],
   "main": "./dist/index-legacy.js",
   "types": "./types/index-legacy.d.ts",
+  "typesVersions": {
+    "*":  {
+      "dist": [
+        "./types/index.d.ts"
+      ],
+      "next": [
+        "./types/index.d.ts"
+      ]
+    }
+  },
+  "exports" : {
+    ".": {
+      "types": "./types/index-legacy.d.ts",
+      "default": "./dist/index-legacy.js"
+    },
+    "./dist/*": {
+        "types": "./types/*.d.ts",
+        "default": "./dist/*.js"
+    },
+    "./next": {
+      "types": "./types/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
   "files": [
     "dist",
     "types"
