when log file is created by another process, don't throw an error (#1062)
* when log file is created by another process, don't throw an error

* Update js/packages/logger/src/handler-rolling-file.ts

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

* update pending chnages

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,7 +12,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Suppress error of log file creation when another process already created the same file
 "@applitools/eyes-selenium":
   feature:
     - 
