Report robotframework test suite during release (#1063)
* [py] allow to select suite to run
* [py] flatten test dependencies
* [py] limit sauce vms usage by generated tests suite
* [py] pass RELEASING_PACKAGE from publishing workflow
* [py] pass releasing_package name instead of test_report_prod flag to include in reports
* [py] use RELEASING_PACKAGE variable to select appropriate reporting name

--- a/.github/workflows/py-publish.yaml
+++ b/.github/workflows/py-publish.yaml
@@ -44,7 +44,7 @@ jobs:
     secrets: inherit
     with:
       ref: ${{needs.make_release_branch.outputs.release_branch}}
-      test_report_prod: true
+      releasing_package: ${{ github.event.inputs.package }}
 
   upload_to_pypi_merge_and_tag:
     needs: [make_release_branch, test]
