--- a/.github/workflows/publish-req.yml
+++ b/.github/workflows/publish-req.yml
@@ -26,7 +26,7 @@ jobs:
   test:
     strategy:
       matrix:
-        node-version: ['12', '14', '16']
+        node-version: ['14', '16']
     name: 'Test (node: ${{matrix.node-version}})'
     runs-on: ubuntu-latest
     steps:
