Add a "server-per-process" mode (#1068)
* Add a "server-per-process" mode

Kill the process by register to the `end` event of `process.stdin` stream.

* add test

* add scripts for linking

* add setup

* fix cookies test

Co-authored-by: kyrylo <kyrylo.onufriiev@applitools.com>

--- a/js/packages/eyes-universal/package.json
+++ b/js/packages/eyes-universal/package.json
@@ -50,13 +50,14 @@
     "build:bin": "pkg .",
     "build:zip": "zip -j ./bin/eyes-universal.zip ./bin/eyes-universal-alpine ./bin/eyes-universal-linux ./bin/eyes-universal-macos ./bin/eyes-universal-win.exe",
     "build:tgz": "tar -czf ./bin/eyes-universal.tar.gz -C ./bin ./eyes-universal-alpine ./eyes-universal-linux ./eyes-universal-macos ./eyes-universal-win.exe",
-    "docker:setup": "node ../scripts/scripts/generate-docker-compose-config.js && docker-compose up -d",
-    "docker:teardown": "docker-compose down",
     "test": "yarn test:unit && yarn test:it && yarn test:e2e",
     "test:sanity": "yarn test:unit && yarn test:it",
     "test:unit": "mocha ./test/unit/*.spec.ts --exit --no-timeouts -r ts-node/register",
-    "test:it": "mocha ./test/it/*.spec.ts --no-timeouts -r ts-node/register",
+    "test:it": "mocha ./test/it/*.spec.ts --no-timeouts -r ts-node/register -r @applitools/test-utils/mocha-hooks/docker",
     "test:e2e": "mocha ./test/e2e/*.spec.ts --exit --no-timeouts -r ts-node/register",
+    "setup": "yarn docker:setup",
+    "docker:setup": "node ../scripts/scripts/generate-docker-compose-config.js && docker-compose up -d",
+    "docker:teardown": "docker-compose down",
     "deps": "bongo deps",
     "gh:publish": "gh workflow run publish-universal.yml --ref $(git rev-parse --abbrev-ref HEAD)",
     "preversion": "bongo preversion --verify-pending-changes --skip-deps",
@@ -81,6 +82,7 @@
   },
   "devDependencies": {
     "@applitools/bongo": "^2.1.6",
+    "@applitools/scripts": "^1.1.0",
     "@applitools/sdk-coverage-tests": "^2.3.20",
     "@applitools/test-server": "^1.1.4",
     "@applitools/test-utils": "^1.4.3",
