--- a/.github/workflows/py-tests.yaml
+++ b/.github/workflows/py-tests.yaml
@@ -6,28 +6,31 @@ on:
       - 'python/**'
   workflow_dispatch:
     inputs:
-      # Unexpected feature: 'bool' type inputs are actually strings.
-      # it's just a signal to GitHub UI to draw a checkbox instead of text input
       unit_tests:
         description: Unit tests
         type: boolean
         required: false
+        default: true
       installation_tests:
         description: Installation tests
         type: boolean
         required: false
+        default: false
       generated_tests:
         description: Generated tests
         type: boolean
         required: false
+        default: false
       functional_tests:
         description: Functional tests
         type: boolean
         required: false
+        default: false
       robotframework_tests:
         description: Robot framework tests
         type: boolean
         required: false
+        default: false
   workflow_call:
     inputs:
       ref:
@@ -38,6 +41,32 @@ on:
         description: name of the package being released
         required: false
         type: string
+      # Same parameters as workflow_dispatch, run all tests by default
+      unit_tests:
+        description: Unit tests
+        type: boolean
+        required: false
+        default: true
+      installation_tests:
+        description: Installation tests
+        type: boolean
+        required: false
+        default: true
+      generated_tests:
+        description: Generated tests
+        type: boolean
+        required: false
+        default: true
+      functional_tests:
+        description: Functional tests
+        type: boolean
+        required: false
+        default: true
+      robotframework_tests:
+        description: Robot framework tests
+        type: boolean
+        required: false
+        default: true
 
 jobs:
   dist-build:
@@ -63,7 +92,7 @@ jobs:
 
   unit-tests:
     needs: dist-build
-    if: ${{ !(github.event_name == 'workflow_dispatch') || github.event.inputs.unit_tests == 'true' }}
+    if: ${{ !(github.event_name == 'workflow_dispatch') || inputs.unit_tests }}
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
@@ -91,7 +120,7 @@ jobs:
 
   unit-tests-alpine:
     needs: dist-build
-    if: ${{ !(github.event_name == 'workflow_dispatch') || github.event.inputs.unit_tests == 'true' }}
+    if: ${{ !(github.event_name == 'workflow_dispatch') || inputs.unit_tests }}
     runs-on: ubuntu-latest
     container: "alpine:latest"
     steps:
@@ -109,7 +138,7 @@ jobs:
 
   installation-tests:
     needs: dist-build
-    if: ${{ !(github.event_name == 'workflow_dispatch') || github.event.inputs.installation_tests == 'true' }}
+    if: ${{ !(github.event_name == 'workflow_dispatch') || inputs.installation_tests }}
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
@@ -133,7 +162,7 @@ jobs:
 
   generated-tests:
     needs: dist-build
-    if: ${{ !(github.event_name == 'workflow_dispatch') || github.event.inputs.generated_tests == 'true' }}
+    if: ${{ !(github.event_name == 'workflow_dispatch') || inputs.generated_tests }}
     concurrency: sauce_group_1
     strategy:
       matrix:
@@ -168,7 +197,7 @@ jobs:
 
   functional-tests:
     needs: dist-build
-    if: ${{ !(github.event_name == 'workflow_dispatch') || github.event.inputs.functional_tests == 'true' }}
+    if: ${{ !(github.event_name == 'workflow_dispatch') || inputs.functional_tests }}
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest ]
@@ -195,7 +224,7 @@ jobs:
 
   sauce-functional-tests:
     needs: dist-build
-    if: ${{ !(github.event_name == 'workflow_dispatch') || github.event.inputs.functional_tests == 'true' }}
+    if: ${{ !(github.event_name == 'workflow_dispatch') || inputs.functional_tests }}
     concurrency: sauce_group_2
     runs-on: ubuntu-latest
     steps:
@@ -218,7 +247,7 @@ jobs:
 
   robot-framework-tests:
     needs: dist-build
-    if: ${{ !(github.event_name == 'workflow_dispatch') || github.event.inputs.robotframework_tests == 'true' }}
+    if: ${{ !(github.event_name == 'workflow_dispatch') || inputs.robotframework_tests }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -240,7 +269,7 @@ jobs:
 
   sauce-robot-framework-tests:
     needs: dist-build
-    if: ${{ !(github.event_name == 'workflow_dispatch') || github.event.inputs.robotframework_tests == 'true' }}
+    if: ${{ !(github.event_name == 'workflow_dispatch') || inputs.robotframework_tests }}
     concurrency: sauce_group_2
     runs-on: ubuntu-latest
     steps:
