--- a/.github/workflows/py-publish.yaml
+++ b/.github/workflows/py-publish.yaml
@@ -11,7 +11,7 @@ on:
       version:
         description: version increment type
         type: choice
-        options: [patch, minor, major]
+        options: [patch, minor, major, post]
         required: true
 
 jobs:
