fix error handing in getStoryData (#1072)

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -58,6 +58,7 @@ Apollo SDK:
     - 
   bug-fix:
     - Better support in DOM slot element
+    - fix error handling
 "@applitools/eyes-webdriverio5-service":
   feature:
     - Support UFG for native mobile
