Fix `selectorOrElement` is both `Selector` and `Element` (#1067)
* Fix `selectorOrElement` is both `Selector` and `Element`

There are cases (`testcafe` for example) that  the `selectorOrElement` is both `Selector` and `Element`.

This change will make sure that if `selectorOrElement` is both `Selector` and `Element`, it will choose to use the `Selector` logic instead of the `Element` logic.

|`isSelector`|`isElement`| logic |
|-|-|-|
|false|false| throw an `Error`|
|false|true| `Element` logic|
|true|false| `Selector` logic|
|true|true| `Selector` logic|

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -43,6 +43,7 @@ Apollo SDK:
     - 
   bug-fix:
     - Added `next` sub-module to support `index.d.ts`. added it both with `exports` and `typesVersions`
+    - fix selector issue in `testcafe`, the selector and the element are the same and once there are multi selector the it's only peak the element
 "@applitools/eyes-nightwatch":
   feature:
     - 
