--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -10,48 +10,48 @@ Apollo SDK:
       An example of how to inline `markdown code highlights`
 "@applitools/eyes-universal":
   feature:
-    - 
+    - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
   bug-fix:
     - 
 "@applitools/eyes-selenium":
   feature:
-    - 
+    - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
   bug-fix:
     - 
 "@applitools/eyes-webdriverio":
   feature:
-    - 
+    - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
   bug-fix:
     - 
 "@applitools/eyes-playwright":
   feature:
-    - 
+    - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
   bug-fix:
     - 
 "@applitools/eyes-protractor":
   feature:
-    - 
+    - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
   bug-fix:
     - 
 "@applitools/eyes-puppeteer":
   feature:
-    - 
+    - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
   bug-fix:
     - 
 "@applitools/eyes-testcafe":
   feature:
-    - 
+    - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
   bug-fix:
     - Added `next` sub-module to support `index.d.ts`. added it both with `exports` and `typesVersions`
     - fix selector issue in `testcafe`, the selector and the element are the same and once there are multi selector the it's only peak the element
 "@applitools/eyes-nightwatch":
   feature:
-    - 
+    - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
   bug-fix:
     - 
 "@applitools/eyes-cypress":
   feature:
-    - 
+    - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
   bug-fix:
     - 
 "@applitools/eyes-storybook":
@@ -69,6 +69,7 @@ Apollo SDK:
     - Add the ability for the SDK to lazy load the page prior to performing a check window
     - Support `addMobileDevice` in user API for NMG
     - Add support for dynamic coded regions
+    - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
   bug-fix:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
@@ -98,6 +99,7 @@ Apollo SDK:
     - Fixed some issues with helper library usage
 eyes-browser-extension:
   feature:
+    - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
     - Added support for taking full screenshots of elements that are scroll by pages only
     - Allowed `` values in custom properties
     - Add the ability for the SDK to lazy load the page prior to performing a check window
@@ -113,6 +115,6 @@ eyes-browser-extension:
     - Better support in DOM slot element
 applitools-for-selenium-ide:
   feature:
-    - 
+    - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
   bug-fix:
     - Better support in DOM slot element
