--- a/js/packages/eyes-cypress/package.json
+++ b/js/packages/eyes-cypress/package.json
@@ -61,6 +61,7 @@
     "@applitools/logger": "1.1.15",
     "@applitools/visual-grid-client": "15.13.13",
     "chalk": "3.0.0",
+    "semver": "7.3.7",
     "uuid": "8.3.2",
     "ws": "8.5.0"
   },
@@ -92,7 +93,6 @@
     "ncp": "2.0.0",
     "node-fetch": "2.6.0",
     "prettier": "1.19.1",
-    "semver": "^7.3.7",
     "typescript": "4.6.4"
   },
   "engines": {
