Disable `HelperAndroid` for `NMG` (#1086)
* Disable `HelperAndroid` on `NMG`

By the request of the Android team, this change will disable the helper usage for Android usage on `NMG` by disable it on `UFG`.

* Continue `UFG_TriggerArea` without waiting

* Update js/packages/driver/src/driver.ts

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

* Add pending-changes

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -10,7 +10,7 @@ Apollo SDK:
       An example of how to inline `markdown code highlights`
 "@applitools/eyes-universal":
   feature:
-    - 
+    - disable the usage of `HelperAndroid` and `HelperIOS` once using `UFG`
   bug-fix:
     - 
 "@applitools/eyes-selenium":
