--- a/js/packages/req/tsconfig.json
+++ b/js/packages/req/tsconfig.json
@@ -8,8 +8,8 @@
     "sourceMap": false,
 
     "module": "commonjs",
-    "target": "es2020",
-    "lib": ["es2020"],
+    "target": "es2019",
+    "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string"],
     "noImplicitAny": true,
     "preserveConstEnums": true,
     "downlevelIteration": true,
