Added support for lazy loading views in android (#1088)
* Daily before extracting value for `Android`

* Wait for `JAVA` and pass the `waitBeforeCapture`

this is for the async JAVA operation

* Change the logic after a talk with android

* Changes after PR review and Android `offset_async`

* PR comments refactor

* PR comments fix

* PR comment changes

* Add tests

* fix

* fix issue with tests

* Add pending-changes

* fix changelog

Co-authored-by: kyrylo <kyrylo.onufriiev@applitools.com>

--- a/js/packages/driver/package.json
+++ b/js/packages/driver/package.json
@@ -81,7 +81,8 @@
     "@applitools/logger": "1.1.16",
     "@applitools/snippets": "2.4.5",
     "@applitools/types": "1.5.9",
-    "@applitools/utils": "1.3.10"
+    "@applitools/utils": "1.3.10",
+    "semver": "7.3.7"
   },
   "devDependencies": {
     "@applitools/bongo": "^2.1.6",
