Add description to universal-server releases (#1082)
* js/uni: add message linking to the changelog file

* js/bongo: refactored the changelog entry query to support loading the changelog file if needed, updated its uses, and exposed the lookup in the cli through the bongo log command behind a --changelog flag

e.g., `bongo log --changelog`

* js/bongo: change flag for displaying the changelog from --changelog to --latest-changelog, also added error handling so it will fail gracefully if not changelog file found

* gh: added dynamic changelog output to the publish action and used it in the publish-universal workflow for the description text used when creating a GH release

* gh: add changelog entry to slack notification when publishing the universal server

* pc: add entry for improve changelog messaging for universal

* gh: add escaping for back-slashes in slack notification string

* pc: move entry to correct SDK

* Update .github/actions/publish/action.yml

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

--- a/.github/actions/publish/action.yml
+++ b/.github/actions/publish/action.yml
@@ -23,6 +23,9 @@ outputs:
   tag:
     description: name of the tag pushed after publishing
     value: ${{steps.publish.outputs.tag}}
+  changelog:
+    description: changelog entries for the latest package version
+    value: ${{steps.publish.outputs.changelog}}
 
 runs:
   using: composite
@@ -77,6 +80,11 @@ runs:
         then 
           echo "::notice::Publish tag - $TAG"
           echo "::set-output name=tag::$TAG"
+        fi
+        CHANGELOG="$(yarn run --silent bongo log --latest-changelog)"
+        if [ ! -z "$CHANGELOG" ]
+        then
+          echo "::set-output name=changelog::$CHANGELOG"
         fi
         echo "::endgroup::"
 
