[req] fix git tag

--- a/js/packages/req/.yarnrc
+++ b/js/packages/req/.yarnrc
@@ -1,2 +1,2 @@
-version-tag-prefix: '@applitools/logger@'
-version-git-message: '@applitools/logger@%s'
+version-tag-prefix: '@applitools/req@'
+version-git-message: '@applitools/req@%s'
