[bongo] fix git tag

--- a/js/packages/bongo/.yarnrc
+++ b/js/packages/bongo/.yarnrc
@@ -1,2 +1,2 @@
-version-tag-prefix: '@applitools/sdk-release-kit@'
-version-git-message: '@applitools/sdk-release-kit@%s'
+version-tag-prefix: '@applitools/bongo@'
+version-git-message: '@applitools/bongo@%s'
