--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,7 +12,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Sending correct commands with android helper lib
 "@applitools/eyes-selenium":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
