gh: update the publish/universal workflow
- so multiline changelog entries are kept as one-line (output in the downstream
job *should* handle this automatically - re: this article
https://renehernandez.io/snippets/multiline-strings-as-a-job-output-in-github-actions/).

- to reference the correct upstream job for the changelog property

--- a/.github/actions/publish/action.yml
+++ b/.github/actions/publish/action.yml
@@ -83,6 +83,9 @@ runs:
         fi
         yarn add @applitools/bongo 
         CHANGELOG="$(npx bongo log --latest-changelog)"
+        CHANGELOG="${CHANGELOG//'%'/'%25'}"
+        CHANGELOG="${CHANGELOG//$'\n'/'%0A'}"
+        CHANGELOG="${CHANGELOG//$'\r'/'%0D'}"
         echo "::set-output name=changelog::$CHANGELOG"
         echo "::endgroup::"
 
