Storybook add tiemout and retry for take dom snapshots (#1097)
* add timeout when calling takeDomDnapshot and retry

* eslint

* update pending changes

* update error message

* update error message in renderStoreies and test

* update pending-changes

* test small adjustments

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -61,7 +61,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Prevent Eyes-Storybook from hanging when there is a failure to take DOM
 "@applitools/eyes-webdriverio5-service":
   feature:
     - Support UFG for native mobile
