--- a/python/eyes_selenium/setup.cfg
+++ b/python/eyes_selenium/setup.cfg
@@ -24,7 +24,7 @@ license = Applitools SDK License
 license_files = LICENSE
 platforms = Linux, MacOS, Windows
 keywords = applitools, eyes, eyes_selenium
-classifiers = 
+classifiers =
 	Programming Language :: Python
 	Development Status :: 4 - Beta
 	Intended Audience :: Developers
@@ -33,24 +33,22 @@ classifiers =
 	Operating System :: POSIX :: Linux
 	Topic :: Software Development :: Quality Assurance
 	Topic :: Software Development :: Testing
-project_urls = 
+project_urls =
 	Source = https://github.com/applitools/eyes.sdk.javascript1/tree/master/python/eyes_selenium
 
 [options]
 packages = find:
-install_requires = 
+install_requires =
 	Appium-Python-Client>=0.4,<1.0.0;python_version<'3.0'
 	Appium-Python-Client<2          ;python_version>='3.0' and python_version<'3.7'
 	Appium-Python-Client<3          ;python_version>='3.7'
 	attrs>=19.2.0,<23
-	cattrs<=1.0.0                   ;python_version<'3.0'
-	cattrs<1.1.0                    ;python_version>='3.0' and python_version<'3.7'
-	cattrs>=1.1.0,<1.2              ;python_version>='3.7'
 	enum34==1.1.6                   ;python_version<'3.4'
 	eyes-common==5.0.0
 	eyes-core==5.0.0
 	eyes-universal>=2.9.11,<3
 	futures==3.2.0                  ;python_version<'3.0'
+	marshmallow<3
 	selenium<5
 	six
 	typing>=3.5.2                   ;python_version<'3.5'
