gh: fix publish-universal action to reference the changelog output from the publish job

--- a/.github/workflows/publish-universal.yml
+++ b/.github/workflows/publish-universal.yml
@@ -41,7 +41,6 @@ jobs:
       branch: ${{steps.version.outputs.branch}}
       version: ${{steps.version.outputs.version}}
       tag: ${{steps.version.outputs.tag}}
-      changelog: ${{steps.publish.outputs.changelog}}
     steps:
       - name: Check-out repository
         uses: actions/checkout@v3
@@ -163,6 +162,7 @@ jobs:
           name: eyes-universal-bin-${{needs.prepare.outputs.version}}
           path: ./js/packages/eyes-universal
       - name: Publish to NPM
+        id: publish
         uses: ./.github/actions/publish
         with:
           working-directory: ./js/packages/eyes-universal
@@ -170,7 +170,8 @@ jobs:
       - name: Publish to GitHub
         uses: softprops/action-gh-release@v1
         with:
-          body: ${{needs.prepare.outputs.changelog}}
+          body: |
+            ${{steps.publish.outputs.changelog}}
           tag_name: ${{needs.prepare.outputs.tag}}
           name: ${{needs.prepare.outputs.tag}}
           files: |
@@ -183,7 +184,7 @@ jobs:
       - name: Send slack notification
         uses: slackapi/slack-github-action@v1.16.0
         with:
-          payload: "{\"blocks\":[{\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\"@channel *Universal SDK* has been released under the tag <https://github.com/applitools/eyes.sdk.javascript1/releases/tag/${{needs.prepare.outputs.tag}}|${{needs.prepare.outputs.tag}}> 🎉 🎊 🥳 \\n\\nChangelog:\\n\\n ${{needs.prepare.outputs.changelog}}\"}},{\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\"Binaries ZIP archive\"},\"accessory\":{\"type\":\"button\",\"text\":{\"type\":\"plain_text\",\"text\":\"Download\",\"emoji\":true},\"url\":\"https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal.zip\"}}]}"
+          payload: "{\"blocks\":[{\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\"@channel *Universal SDK* has been released under the tag <https://github.com/applitools/eyes.sdk.javascript1/releases/tag/${{needs.prepare.outputs.tag}}|${{needs.prepare.outputs.tag}}> 🎉 🎊 🥳 \\n\\nChangelog:\\n\\n ${{steps.publish.outputs.changelog}}\"}},{\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\"Binaries ZIP archive\"},\"accessory\":{\"type\":\"button\",\"text\":{\"type\":\"plain_text\",\"text\":\"Download\",\"emoji\":true},\"url\":\"https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal.zip\"}}]}"
         env:
           SLACK_WEBHOOK_URL: ${{secrets.UNIVERSAL_SLACK_WEBHOOK_URL}}
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
