--- a/js/packages/nml-client/package.json
+++ b/js/packages/nml-client/package.json
@@ -53,6 +53,7 @@
     "@applitools/bongo": "^2.2.0",
     "@applitools/scripts": "^1.1.0",
     "@applitools/spec-driver-selenium": "^1.3.17",
+    "@applitools/test-server": "^1.1.4",
     "@applitools/test-utils": "^1.5.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "12",
