--- a/js/packages/eyes-universal/package.json
+++ b/js/packages/eyes-universal/package.json
@@ -82,8 +82,10 @@
   },
   "devDependencies": {
     "@applitools/bongo": "^2.2.0",
+    "@applitools/eyes-api": "^1.7.5",
     "@applitools/scripts": "^1.1.0",
     "@applitools/sdk-coverage-tests": "^2.3.20",
+    "@applitools/spec-driver-selenium": "^1.3.17",
     "@applitools/test-server": "^1.1.4",
     "@applitools/test-utils": "^1.5.1",
     "@applitools/types": "1.5.9",
@@ -103,6 +105,7 @@
     "mocha": "^9.0.0",
     "pkg": "^5.6.0",
     "prettier": "^2.6.2",
+    "selenium-webdriver": "^4.4.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.6.4"
   },
