--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -10,7 +10,8 @@ Apollo SDK:
       An example of how to inline `markdown code highlights`
 "@applitools/eyes-universal":
   feature:
-    - 
+    - create new nodejs client to eyes-universal
+    - create stress test script
   bug-fix:
     - 
 "@applitools/eyes-selenium":
