--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -10,52 +10,59 @@ Apollo SDK:
       An example of how to inline `markdown code highlights`
 "@applitools/eyes-universal":
   feature:
-    - create new nodejs client to eyes-universal
-    - create stress test script
+    - Created testing client for eyes-universal
+    - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
     - 
 "@applitools/eyes-selenium":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
     - Added support for lazy loading views in android native apps
+    - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
     - 
 "@applitools/eyes-webdriverio":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
     - Added support for lazy loading views in android native apps
+    - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
     - 
 "@applitools/eyes-playwright":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
+    - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
     - 
 "@applitools/eyes-protractor":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
     - Added support for lazy loading views in android native apps
+    - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
     - 
 "@applitools/eyes-puppeteer":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
+    - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
     - 
 "@applitools/eyes-testcafe":
   feature:
-    - 
+    - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
     - 
 "@applitools/eyes-nightwatch":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
     - Added support for lazy loading views in android native apps
+    - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
     - 
 "@applitools/eyes-cypress":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
+    - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
     - 
 "@applitools/eyes-storybook":
@@ -74,6 +81,7 @@ Apollo SDK:
     - Support `addMobileDevice` in user API for NMG
     - Add support for dynamic coded regions
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
+    - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
@@ -107,6 +115,7 @@ eyes-browser-extension:
     - Added support for taking full screenshots of elements that are scroll by pages only
     - Allowed `` values in custom properties
     - Add the ability for the SDK to lazy load the page prior to performing a check window
+    - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
